--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "body-parser": "^1.20.2",
     "cross-fetch": "^3.1.5",
     "express.js": "^1.0.0",
+    "facebook-nodejs-business-sdk": "^15.0.2",
     "http-server": "^14.1.1"
   }
 }
