--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-fetch": "^3.1.5",
     "express.js": "^1.0.0",
     "facebook-nodejs-business-sdk": "^15.0.2",
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
